<resources>
    <string name="app_name">Homies</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chores">Chores</string>
    <string name="title_profile">Profile</string>
    <string name="title_house">House</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="app_logo_content_description">app logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="log_in_title">Log In</string>
    <string name="logout_menu_item">Logout</string>
    <string name="add_house_action">Add House</string>
    <string name="house_name_prompt">House Name</string>
    <string name="invite_prompt">Invite Members by Email (comma separated)</string>
    <string name="cancel_action">Cancel</string>
    <string name="save_action">Save</string>
    <string name="join_house_action">Join House</string>
    <string name="no_house_available">No house is available. Please add or join a house.</string>
    <string name="house_id_prompt">House ID</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="total_thumbs_up">Total Thumbs Up</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="thumbs_up_value">0</string>
    <string name="completed_tasks_value">0</string>
    <string name="no_rooms_added_prompt">There are currently no rooms added. Please click the \'+\' button to add a
        room.
    </string>
    <string name="rooms_descriptor">Rooms:</string>
    <string name="room_name_prompt">Room Name</string>
    <string name="add_chore">Add Chore</string>
    <string name="chore_name">Chore Name</string>
    <string name="chore_finish_date">Chore Finish Date</string>
    <string name="no_chores">No chores in the house. Please add a chore.</string>
    <string name="completed_chores_descriptor">Completed Chores: %1$s</string>
    <string name="open_chores_descriptor">Open Chores: %1$s</string>
    <string name="filter_chores">Filter Chores:</string>
</resources>
