<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@android:color/white">


    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="150dp" android:id="@+id/guideline"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="210dp" android:id="@+id/guideline2"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="270dp" android:id="@+id/guideline3"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="330dp" android:id="@+id/guideline4"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="390dp" android:id="@+id/guideline7"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="450dp" android:id="@+id/guideline8"/>
    <ImageView
            android:layout_width="117dp"
            android:layout_height="120dp" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/login_logo" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/app_logo_content_description"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/email"
            android:textColor="@android:color/background_dark" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3" android:textColorLink="@color/colorSecondary"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:hint="@string/password"
            android:textColor="@android:color/background_dark" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"/>
    <Button
            android:text="@string/action_log_in"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline7"
            android:background="@color/colorSecondary"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            android:textSize="32sp" android:textStyle="bold" android:textColor="@color/colorPrimary"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createAccountTextView" android:textAlignment="center"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/guideline8"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>