<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:id="@+id/userName"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/scrollView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="203dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:layout_marginLeft="32dp" android:layout_marginRight="32dp">
            <fragment
                    android:layout_width="match_parent"
                    android:layout_height="250dp" android:name="com.example.evan.homies.PieChartFragment"
                    android:id="@+id/fragment" android:layout_weight="1"/>

        </LinearLayout>
    </ScrollView>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline10" app:layout_constraintGuide_end="336dp"
            app:layout_constraintGuide_begin="171dp"/>
    <TextView
            android:text="@string/total_thumbs_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thumbsUpTextTitle" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline9" android:textStyle="bold"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/completed_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/completedTaskTextTitle" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline9" android:textStyle="bold"
            android:textAlignment="center" android:textSize="14sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline9" app:layout_constraintGuide_end="432dp"
            app:layout_constraintGuide_begin="72dp"/>
    <TextView
            android:text="@string/completed_tasks_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/completedTasksText"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/completedTaskTextTitle" android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center" app:layout_constraintStart_toStartOf="@+id/completedTaskTextTitle"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/completedTaskTextTitle"
            android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"/>
    <TextView
            android:text="@string/thumbs_up_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thumbsUpText" android:textStyle="bold"
            android:textAlignment="center" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/thumbsUpTextTitle"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/thumbsUpTextTitle"
            android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/thumbsUpTextTitle" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"/>

</android.support.constraint.ConstraintLayout>